fixed sidenav scroll view on small screens

--- a/web-parts/header/header.css
+++ b/web-parts/header/header.css
@@ -89,16 +89,17 @@
 /* SIDENAV */
 
 .sidenav {
-    height: 100vh;
+    height: calc(100vh - 95px); /* Ensures it doesn't overlap the fixed header */
     width: 0;
-    position: fixed; /* Makes it independent from .header */
+    position: fixed;
     top: 95px;
     left: 0;
     background-color: rgba(0, 0, 0, 0.9);
+    overflow-y: auto; /* Enables vertical scrolling */
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 30px;
-    z-index: 100; 
+    z-index: 100;
 }
 
 .sidenav a {
